# SeismoFlux

./: .gitattributes  .gitignore  AGENTS.md  README.md  SEISMOFLUX_IMPLEMENTATION_HANDOFF.md  pyproject.toml
.github/workflows/: ci.yml
configs/: anomaly_history.yaml  anomaly_increment.yaml  anomaly_increment_r1.yaml  anomaly_increment_r2.yaml  background.yaml  background_etas_numerical_repair.yaml  background_local_support.yaml  base.yaml  base_local_support.yaml  data_sources.yaml  ingestion.yaml  operating_points.yaml  research_protocol.yaml
docs/: anomaly_feature_protocol.md  anomaly_feature_report.md  anomaly_increment_protocol.md  anomaly_increment_protocol_r1.md  anomaly_increment_protocol_r2.md  background_baseline_report.md  background_etas_numerical_repair_protocol.md  background_local_support_protocol.md  background_local_support_report.md  background_protocol.md  data_licenses.md  data_quality_report.md  phase0_acceptance.md  phase1_acceptance.md  phase2_etas_numerical_repair_protocol_acceptance.md  phase2r0_acceptance.md  phase2r1_acceptance.md  phase3_acceptance.md  phase4_protocol_acceptance.md  phase4_protocol_r1_acceptance.md  phase4_protocol_r2_acceptance.md  phase4_scoring_readiness_incident_r0.md  research_protocol.md  restart_handoff_2026-07-17_stage4_r2.md  restart_handoff_2026-07-19_stage2_etas_repair_protocol.md
scripts/: audit_stage4_r1_logical_replay.py  build_stage4_formal_preflight.py  build_stage4_preregistration.py  build_stage4_scoring_qualification.py  build_stage4_scoring_seal.py  generate_background_local_support_manifest.py  render_background_local_support_diagnostic.py  run_stage4_formal.py
src/seismoflux/: cli.py  (+5 more)
(+243 files in other folders)
